<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/menuTv"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:gravity="center"
        android:text="MENU"
        android:textSize="50sp"/>

    <Button
        android:id="@+id/createBillBtn"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/menuTv"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:background="#2196F3"
        android:onClick="createBill"
        android:text="@string/tao_phieu"
        android:textSize="40sp" />

    <Button
        android:id="@+id/settingBtn"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/createBillBtn"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:background="#F40808"
        android:onClick="openSetting"
        android:text="@string/cai_dat"
        android:textSize="40sp"/>

    <Button
        android:id="@+id/listBtn"
        android:layout_width="412dp"
        android:layout_height="152dp"
        android:layout_below="@+id/settingBtn"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:background="#2FF80C"
        android:onClick="openList"
        android:text="@string/danh_sach"
        android:textSize="40sp"/>
</RelativeLayout>